Fixed an issue with particles. Set z-index to 6 to allow on hover and on click effects.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -357,7 +357,7 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1; /* Behind all other elements */
+    z-index: 6; /* Behind all other elements */
     background: transparent; /* Ensure it's visible */
     pointer-events: auto;
 }
